--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "autoload": {
         "psr-4": {
-            "YiluTech\\Permission\\": "src/"
+            "YiluTech\\ShareCache\\": "src/"
         }
     },
     "extra": {
@@ -38,6 +38,5 @@
     "config": {
         "sort-packages": true
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "minimum-stability": "dev"
 }
