--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,6 @@
         "ShareCache"
     ],
     "license": "MIT",
-    "support": {
-    },
     "authors": [
         {
             "name": "yj",
@@ -16,12 +14,8 @@
     ],
     "require": {
         "php": ">=7.1",
-        "ext-json": "*",
         "guzzlehttp/guzzle": "~6.0",
         "laravel/framework": "~5.7.0|~5.8.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~7.4"
     },
     "autoload": {
         "psr-4": {
@@ -29,6 +23,9 @@
         }
     },
     "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        },
         "laravel": {
             "providers": [
                 "YiluTech\\ShareCache\\ShareCacheServiceProvider"
