--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,8 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "guzzlehttp/guzzle": "~6.0",
-        "laravel/framework": "~5.7.0|~5.8.0"
+        "guzzlehttp/guzzle": "^6.0",
+        "predis/predis": "^1.1"
     },
     "autoload": {
         "psr-4": {
